packages/shared-skills/skills/programming/fixtures/java/no-excuse/fail/domain-framework-import/src/main/java/sample/member/domain/DomainFrameworkImportCase.java
package sample.member.domain;

import org.springframework.stereotype.Service;

class DomainFrameworkImportCase {
}
